0.04
 - Fix EXAMPLE in doc. Fix to real @ARGS.
 - Move code to construct command outside of cycle.

0.03 2024-06-23T12:53:42+02:00
 - Add tests.
 - Fix print to STDERR for error.
 - Rewrite run() test to use help() helper.
 - Update copyright years.

0.02 2023-12-10T12:07:23+01:00
 - Add check for preset values.
 - Fix @ARGV in test.
 - Fix test run. We need to use perl, which we are testing.

0.01 2023-12-07T21:19:44+01:00
 - First version.